@@ -122,14 +122,24 @@ remote repository.  You can see all packages (the default) only
 locally added packages, only foreign packages, or only local packages
 that conflict with a foreign package.
 
-=item remove Some::Package
+=item remove Some-Distribution-1.0.tar.gz
 
-Removes the local distribution that contains the given package.  All
-other packages that were contained in the same distribution are also
-removed.  You can only remove a package that B<YOU> have added.  You
-cannot remove packages in foreign distributions that were pulled in
-from a remote source (however you can mask them by adding your own
-versions).
+Removes the local distribution with the given name.  You must specify
+the complete distribution name, including version number and
+extension.  The precise identity of the distribution that will be
+removed depends on who you are.  So if you are C<JOE> and you ask to
+remove C<Foo-1.0.tar.gz> then you are really asking to remove
+F<J/JO/JOE/Foo-1.0.tar.gz>.  To remove a distribution that was added
+by another author, use the C<--author> parameter to change who you
+are.  Or you can just explicitly specify the full identity of the
+distribution.  So the following two examples are equivalent:
+
+  $> pinto-admin --repos=/some/dir remove --author SUSAN Foo-1.0.tar.gz
+  $> pinto-admin --repos=/some/dir remove S/SU/SUSAN/Foo-1.0.tar.gz
+
+You cannot remove foreign distributions that were pulled in from
+another repository using the C<update> command (however you can mask
+them by adding your own versions).
 
 You can also pipe arguments to this command over STDIN.  In that case,
 blank lines and lines that look like comments (i.e. starting with "#"
