@@ -5,7 +5,7 @@ license     = Perl_5
 copyright_holder = Imaginative Software Systems
 copyright_year   = 2011
 
-version = 0.022
+version = 0.023
 
 [GatherDir]         ; everything under top dir
 [PruneCruft]        ; default stuff to skip
