@@ -277,13 +277,29 @@ sub remove {
         if (my $incumbent = $self->packages->at($package)) {
             my $location = $incumbent->dist->location();
             my $dist = $self->distributions->delete( $location );
-            my @package_names = map {$_->name()} $dist->packages()->flatten();
+            my @package_names = map {$_->name()} $dist->packages();
             $self->packages->delete($_) for @package_names;
             push @removed_dists, $dist;
         }
 
     }
     return @removed_dists;
+}
+
+#------------------------------------------------------------------------------
+
+sub remove_dist {
+    my ($self, $dist) = @_;
+
+    $dist = $dist->location()
+        if eval { $dist->isa('Pinto::Distribution') };
+
+    my $deleted = $self->distributions->delete( $dist );
+    return $self if not $deleted;
+
+    $self->packages->delete($_) for $deleted->packages();
+
+    return $deleted;
 }
 
 #------------------------------------------------------------------------------
