@@ -240,29 +240,21 @@ sub rebuild_master_index {
 
 #------------------------------------------------------------------------------
 
-sub remove_local_package {
+sub remove_local_distribution_at {
     my ($self, %args) = @_;
 
-    my $package = $args{package};
-    my $author  = $args{author};
+    my $location = $args{location};
 
-    my $orig_author = $self->local_author_of(package => $package);
-    if (defined $orig_author and $author ne $orig_author) {
-        my $msg = "Only author $orig_author can remove $package";
-        Pinto::Exception::Unauthorized->throw($msg);
-    }
+    my $dist = $self->local_index->distributions->at($location);
+    return if not $dist;
 
-    my $local_dist = ( $self->local_index->remove($package) )[0];
-    return if not $local_dist;
+    $self->local_index->remove_dist($dist);
+    $self->logger->debug("Removed $dist from local index");
 
-    $self->logger->debug("Removed $local_dist from local index");
+    $self->master_index->remove_dist($dist);
+    $self->logger->debug("Removed $dist from master index");
 
-    my $master_dist = ( $self->master_index->remove($package) )[0];
-    $self->logger->debug("Removed $master_dist from master index");
-
-    $self->rebuild_master_index();
-
-    return $local_dist;
+    return $dist;
 }
 
 #------------------------------------------------------------------------------
@@ -327,6 +319,8 @@ sub add_local_distribution {
     return @removed_dists;
 
 }
+
+#------------------------------------------------------------------------------
 
 sub _distribution_check {
     my ($self, $new_dist, $new_file) = @_;
